--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,7 +7,7 @@
             <div class="flex justify-between mb-6">
                 <div>
                     <div class="flex items-center mb-1">
-                        <div class="text-2xl font-semibold">2</div>
+                        <div class="text-2xl font-semibold">{{ unique_emails|length }}</div>
                     </div>
                     <div class="text-sm font-medium text-gray-400">Users</div>
                 </div>
@@ -27,16 +27,17 @@
                 </div> 
             </div>
 
-            <a href="/gebruikers" class="text-[#f84525] font-medium text-sm hover:text-red-800">View</a>
+            {% comment %} <a href="/gebruikers" class="text-[#f84525] font-medium text-sm hover:text-red-800">View</a> {% endcomment %}
         </div>
         <div class="bg-white rounded-md border border-gray-100 p-6 shadow-md shadow-black/5">
             <div class="flex justify-between mb-4">
                 <div>
                     <div class="flex items-center mb-1">
-                        <div class="text-2xl font-semibold">100</div>
-                        <div class="p-1 rounded bg-emerald-500/10 text-emerald-500 text-[12px] font-semibold leading-none ml-2">+30%</div>
+                        <div class="text-2xl font-semibold">{{ total_log }}</div>
+                        <div class="p-1 rounded bg-emerald-500/10 text-emerald-500 text-[12px] font-semibold leading-none ml-2">inc( All plugins )</div>
+
                     </div>
-                    <div class="text-sm font-medium text-gray-400">Companies</div>
+                    <div class="text-sm font-medium text-gray-400">Total Logs</div>
                 </div>
                  <div class="dropdown">
                     <button type="button" class="dropdown-toggle text-gray-400 hover:text-gray-600"><i class="ri-more-fill"></i></button>
@@ -53,13 +54,13 @@
                     </ul>
                 </div> 
             </div>
-            <a href="/dierenartsen" class="text-[#f84525] font-medium text-sm hover:text-red-800">View</a>
+            {% comment %} <a href="/dierenartsen" class="text-[#f84525] font-medium text-sm hover:text-red-800">View</a> {% endcomment %}
         </div>
         <div class="bg-white rounded-md border border-gray-100 p-6 shadow-md shadow-black/5">
             <div class="flex justify-between mb-6">
                 <div>
-                    <div class="text-2xl font-semibold mb-1">100</div>
-                    <div class="text-sm font-medium text-gray-400">Blogs</div>
+                    <div class="text-2xl font-semibold mb-1">{{ success }} / {{ error }}</div>
+                    <div class="text-sm font-medium text-gray-400">No. of success & Errors</div>
                 </div>
                  <div class="dropdown">
                     <button type="button" class="dropdown-toggle text-gray-400 hover:text-gray-600"><i class="ri-more-fill"></i></button>
@@ -76,7 +77,7 @@
                     </ul>
                 </div> 
             </div>
-            <a href="" class="text-[#f84525] font-medium text-sm hover:text-red-800">View</a>
+            {% comment %} <a href="" class="text-[#f84525] font-medium text-sm hover:text-red-800">View</a> {% endcomment %}
         </div>
     </div>
 
