"Removed sample.txt and xtracut_logo_retina_dark_31-7.png files, updated base.html to replace text with image tag referencing the removed logo file"

--- a/templates/base.html
+++ b/templates/base.html
@@ -1346,7 +1346,7 @@ video {
     <div class="fixed left-0 top-0 w-64 h-full bg-[#f8f4f3] p-4 z-50 sidebar-menu transition-transform">
         <a href="#" class="flex items-center pb-4 border-b border-b-gray-800">
 
-            <h2 class="font-bold text-2xl">LOREM <span class="bg-[#f84525] text-white px-2 rounded-md">IPSUM</span></h2>
+          <img src="https://github.com/NagiPragalathan/Xtracut_Log_Management_System/blob/main/static/xtracut_logo_retina_dark_31-7.png?raw=true" alt="Xtracut Logo">
         </a>
         <ul class="mt-4">
             <span class="text-gray-400 font-bold">ADMIN</span>
