--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -86,24 +86,25 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-4">
                 <div class="rounded-md border border-dashed border-gray-200 p-4">
                     <div class="flex items-center mb-0.5">
-                        <div class="text-xl font-semibold">10</div>
-                        <span class="p-1 rounded text-[12px] font-semibold bg-blue-500/10 text-blue-500 leading-none ml-1">$80</span>
+                        <div class="text-xl font-semibold">{{ unique_emails|length }}</div>
+                        <span class="p-1 rounded text-[12px] font-semibold bg-blue-500/10 text-blue-500 leading-none ml-1">All</span>
                     </div>
-                    <span class="text-gray-400 text-sm">Active</span>
+                    <span class="text-gray-400 text-sm">User</span>
                 </div>
                 <div class="rounded-md border border-dashed border-gray-200 p-4">
                     <div class="flex items-center mb-0.5">
-                        <div class="text-xl font-semibold">50</div>
-                        <span class="p-1 rounded text-[12px] font-semibold bg-emerald-500/10 text-emerald-500 leading-none ml-1">+$469</span>
+                        <div class="text-xl font-semibold">{{ unique_plugins }}</div>
+                        <span class="p-1 rounded text-[12px] font-semibold bg-emerald-500/10 text-emerald-500 leading-none ml-1">All</span>
                     </div>
-                    <span class="text-gray-400 text-sm">Completed</span>
+                    <span class="text-gray-400 text-sm">Plugin</span>
                 </div>
                 <div class="rounded-md border border-dashed border-gray-200 p-4">
                     <div class="flex items-center mb-0.5">
-                        <div class="text-xl font-semibold">4</div>
-                        <span class="p-1 rounded text-[12px] font-semibold bg-rose-500/10 text-rose-500 leading-none ml-1">-$130</span>
+                        <div class="text-xl font-semibold">No. of {{ unique_status_codes }}</div>
+
+                        <span class="p-1 rounded text-[12px] font-semibold bg-rose-500/10 text-rose-500 leading-none ml-1">201&nbsp;/&nbsp;500</span>
                     </div>
-                    <span class="text-gray-400 text-sm">Canceled</span>
+                    <span class="text-gray-400 text-sm">Status Code</span>
                 </div>
             </div>
             <div>
