changed icon and title for index page

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <link rel="icon" href="https://github.com/NagiPragalathan/GeeksforGeeks_files/blob/main/78974316550-removebg-preview.png?raw=true" type="image/x-icon" />
     <title>Admin Panel</title>
 
     <style>
