--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,11 @@
   href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;1,100;1,200&display=swap"
   rel="stylesheet" />
 <script src="https://cdn.tailwindcss.com"></script>
+<!-- Tab Icon (Favicon) -->
+<link rel="icon" href="https://github.com/NagiPragalathan/GeeksforGeeks_files/blob/main/78974316550-removebg-preview.png?raw=true" type="image/x-icon" />
+
+<!-- Tab Title -->
+<title>Xtracut | Log Management System</title>
 
 <style>
   section {
