"Added custom cursor style and updated index.html template"

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,11 @@
 <script src="https://cdn.tailwindcss.com"></script>
 
+{% comment %} <style> {% endcomment %}
+  body {
+    cursor: url('https://cdn-icons-png.flaticon.com/128/992/992700.png') 16 16, auto;
+}
+</style>
+
 <!-- component -->
 <div class="relative isolate overflow-hidden bg-gray-900">
   <svg class="absolute inset-0 -z-10 h-full w-full stroke-white/10 [mask-image:radial-gradient(100%_100%_at_top_right,white,transparent)]" aria-hidden="true">
