--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -169,8 +169,9 @@
                 <label for="plugin_filter" class="block text-gray-700 font-medium mb-2">Filter by plugin:</label>
                 <select name="plugin_filter" id="plugin_filter" onchange="this.form.submit()" class="w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
                     <option value="all" {% if not plugin_filter or plugin_filter == 'all' %}selected{% endif %}>All</option>
-                    <option value="sample" {% if plugin_filter == 'sample' %}selected{% endif %}>Sample</option>
-                    <option value="sample_one" {% if plugin_filter == 'sample_one' %}selected{% endif %}>Sample One</option>
+                    <option value="acuity_scheduling" {% if plugin_filter == 'acuity_scheduling' %}selected{% endif %}>Acuity Scheduling</option>
+                    <option value="calendly" {% if plugin_filter == 'calendly' %}selected{% endif %}>Calendly</option>
+                    <option value="active_campaign" {% if plugin_filter == 'active_campaign' %}selected{% endif %}>Active Campaign</option>
                 </select>
             </div>
 
@@ -189,15 +190,24 @@
                 <label for="function_filter" class="block text-gray-700 font-medium mb-2">Filter by function:</label>
                 <select name="function_filter" id="function_filter" onchange="this.form.submit()" class="w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
                     <option value="all" {% if not function_filter or function_filter == 'all' %}selected{% endif %}>All</option>
-                    <option value="sample" {% if function_filter == 'sample' %}selected{% endif %}>Sample</option>
-                    <option value="samplefn" {% if function_filter == 'samplefn' %}selected{% endif %}>Sample Function</option>
+                    {% for function in unique_functions %}
+                        <option value="{{ function }}" {% if function_filter == function %}selected{% endif %}>
+                            {{ function }}
+                        </option>
+                    {% empty %}
+                        <option value="">No functions available</option>
+                    {% endfor %}
                 </select>
             </div>
 
             <!-- User Mail Filter -->
             <div class="col-span-1 md:col-span-2 lg:col-span-3">
                 <label for="user_mailid_filter" class="block text-gray-700 font-medium mb-2">Filter by user mail ID:</label>
+                {% if  user_mailid_filter %}
                 <input type="text" name="user_mailid_filter" id="user_mailid_filter" value="{{ user_mailid_filter }}" placeholder="Enter mail ID" class="w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+                {% else %}
+                <input type="text" name="user_mailid_filter" id="user_mailid_filter" placeholder="Enter mail ID" class="w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+                {% endif %}
             </div>
 
             <div class="col-span-1 md:col-span-2 lg:col-span-3 text-center">
